# lazysysd

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  models.rs
src/app/: auth.rs  editor.rs  events.rs  events_log.rs  events_unit.rs  filters.rs  mod.rs  runner.rs  search.rs  selection.rs  state.rs  utils.rs
src/app/events/: file.rs  handler.rs  internal.rs  log.rs  mod.rs  nav.rs  unit.rs
src/app/state/: context.rs  fetching.rs  file.rs  files.rs  log.rs  logs.rs  mod.rs  nav.rs  search.rs  unit.rs  units.rs
src/systemd/: auth.rs  dbus.rs  edit.rs  journal.rs  mod.rs
src/ui/: mod.rs  render.rs  utils.rs
src/ui/components/: file_view.rs  header.rs  help.rs  log_view.rs  logs.rs  mod.rs  modals.rs  unit_list.rs
