[package]
name = "lazysysd"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }
zbus = "5.15"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
nucleo-matcher = "0.3"
tokio-stream = { version = "0.1", features = ["time"] }
async-trait = "0.1"
tailspin = { version = "6.0", default-features = false }
ansi-to-tui = "8.0"
serde = { version = "1.0", features = ["derive"] }
