[package]
name = "sdctl"
version = "0.1.0"
edition = "2024"
authors = ["Rui Jiang"]
description = "An easy-to-use TUI for managing systemd units"
license = "MIT"
repository = "https://github.com/ruidofm/sdctl"
readme = "README.md"
keywords = ["systemd", "tui", "ratatui", "linux"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.30", features = ["all-widgets"] }
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
zbus = "5.15"
portable-pty = "0.9"
tokio = { version = "1.52", features = ["full"] }
futures = "0.3"
nucleo-matcher = "0.3"
tokio-stream = { version = "0.1", features = ["time"] }
async-trait = "0.1"
tailspin = { version = "6.0", default-features = false }
ansi-to-tui = "8.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
libc = "0.2"
which = "8.0"
